# dartlab

./: .coverage  .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENT.md  BROKEN_LINKS_REPORT.txt  CAPABILITIES.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  Dockerfile.spaces  README.md  README_KR.md  SECURITY.md  STRUCTURE_MAP.md  TODO.md  TODO_AI_ANALYSIS.md  main.py  mkdocs.yml  pyproject.toml  startMarimo.py
.githooks/: commit-msg  pre-commit  pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/data/: edgarTickers.json
.github/scripts/: bulkUploadHf.py  monitorPipeline.py  prebuildData.py  syncData.py  syncEdgarDocs.py  syncRecent.py  uploadData.py  uploadHfReadme.py
.github/workflows/: ai-policy.yml  benchmark.yml  ci.yml  codeql.yml  dataPipeline.yml  dataPrebuild.yml  dataSync.yml  dataSyncDaily.yml  docs.yml  edgarSync.yml  evalNightly.yml  hfSpaces.yml  hfSpacesLite.yml  kindlist.yml  macroReport.yml  publish.yml  stale.yml  vscode.yml
.tmp-ai-home/: ai_profile.json
_deprecated/: mkdocs.yml
benchmarks/: data.js
blog/: 001-everything-about-dart.md  002-opendart-review.md  003-beyond-the-numbers.md  004-reading-business-reports.md  005-python-financial-analysis.md  006-everything-about-edgar.md  007-edgar-integrated-playbook.md  008-business-section-changes-judgment.md  009-edgar-filing-original-text-api.md  010-capacity-utilization-capex.md  011-construction-in-progress.md  012-depreciation-after-capex.md  ASSET_POLICY.md  BLOG_STRUCTURE.md  TOPIC_ROADMAP.md
blog/04-credit-reports/: _registry.json
blog/05-company-reports/: _registry.json
blog/_reference/: 017-020-source-checklist.md  028-031-writing-pack.md  WRITING_QUEUE.md
blog/assets/: STATUS.md
data/credit/: external_grades.json
docs/: STATUS.md  about.md  changelog.md  index.md  methodology.md  stability.md
docs/_deprecated/: bridge-matching.md
docs/api/: advanced.md  ai.md  analysis.md  company.md  credit.md  export.md  finance-others.md  finance-statements.md  finance-summary.md  finance.md  gather.md  generated-reference.md  insight.md  mcp.md  overview.md  rank.md  review.md  scan.md  sector.md  timeseries.md
docs/getting-started/: cli-maintenance.md  installation.md  quickstart.md  sections.md
docs/macro-reports/: 2026-04-KR.md
docs/samples/: 000270.md  000660.md  004020.md  005930.md  017670.md  034730.md  036570.md  042660.md  051910.md  090430.md
docs/stylesheets/: theme.css
docs/tutorials/: 01_quickstart.md  02_financial-statements.md  02_financial.md  03_disclosure.md  03_timeseries.md  04_advanced.md  04_ratios.md  05_report-data.md  06_disclosure.md  07_advanced.md  08_cross-company.md  09_edgar.md  10_network.md  11_distress.md  STATUS.md  index.md
docs/user-guide/: bridge-matching.md
examples/dartlab-plugin-example/: pyproject.toml
examples/dartlab-plugin-example/src/dartlab_plugin_example/: __init__.py  score.py
experiments/001_numberBridgeMatching/: 001_bridgeTest.py  002_bridgeInterpolation.py  003_breakpointDetection.py  004_fullPipeline.py  005_falseMatchVerification.py
experiments/002_notes/: 001_segmentExplore.py  002_segmentParse.py  003_headerAnalysis.py  004_multiCompanyTest.py  STATUS.md
experiments/003_subsidiaries/: 001_explore.py  002_parseExplore.py  003_multiCompany.py  004_affiliateParse.py  005_debugHeaders.py  006_universalParse.py  007_v2Parse.py  008_debugHyundai.py  009_debugNaver.py  010_debugMerge.py  011_debugLG.py  012_debug2024.py  STATUS.md  (+2 more)
experiments/079_rustMigration/: Cargo.toml  STATUS.md
experiments/079_rustMigration/src/: chunker.rs  content.rs  heading.rs  lib.rs  mapper.rs  pipeline.rs  sectionMappings.json
experiments/104_rustNative/: 001_benchmark.py  Cargo.toml  STATUS.md  pyproject.toml
experiments/104_rustNative/src/: heading.rs  lib.rs  text_structure.rs
landing/: DEV.md  STATUS.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
notebooks/: STATUS.md
ops/: README.md  ai.md  analysis.md  architecture.md  code.md  company.md  credit.md  data.md  edgar.md  experiments.md  gather.md  guide.md  issues.md  macro.md  quant.md  review.md  scan.md  search.md  selfai.md  testing.md  ui.md  viz.md  vscode.md
scripts/: auditAi.py  auditBlog.py  backtestPrediction.py  buildProductIndex.py  check_no_ai_markers.py  evalDiagnose.py  evalWeeklyDigest.py  fitCrossSection.py  generateFixtures.py  generateSpec.py  harvestEvalTruth.py  hfPreload.py  qualityBaseline.json  qualityGate.py  regenerate_blog_svgs.py  runEvalBatch.py  runScanAudit.py  scanCrossInsights.py  scanInsights.py  structureMap.py  svg_dark_convert.py  test-lock.sh  trainRouter.py  validateNotebooks.py
spaces/: README.md  app.py  requirements.txt
spaces-docker/: README.md
startMarimo/: README.md  aiAnalysis.py  dartCompany.py  edgarCompany.py
startNotebook/: dartCompany.py
tests/: conftest.py  fixtureHelper.py  test_affiliate.py  test_agent.py  test_ai_capabilities.py  test_ai_context_modules.py  test_ai_context_routing.py  test_ai_parser.py  test_ai_runtime.py  test_analysis_calcs.py  test_analysis_engine.py  test_analysis_integration.py  test_analysis_more_calcs.py  test_analysis_prediction_full.py  test_analyst.py  test_api_common.py  test_benchmarks.py  test_bsIdentity.py  test_channel_adapters.py  test_channel_runtime_api.py  test_cli.py  test_cli_commands.py  test_cli_e2e.py  test_cli_main.py  test_cli_packaging.py  test_cli_providers.py  test_coding_local.py  test_coding_runtime.py  test_company.py  test_companyLiveFilings.py  test_company_architecture.py  test_company_validation.py  test_context.py  test_context_coverage.py  test_core_parser.py  test_core_utils.py  test_credit.py  test_credit_calcs.py  test_credit_engine.py  test_credit_integration.py  (+101 more)
ui/: index.html  package-lock.json  package.json
vscode/: .gitignore  .vscode-test.mjs  .vscodeignore  CHANGELOG.md  README.md  esbuild.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wdio.conf.js
(+3268 files in other folders)
