[project]
name = "dartlab"
version = "0.7.5"
description = "공시 문서에서 하나의 회사 맵을 만든다 — DART + EDGAR"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
authors = [
    {name = "eddmpython"}
]
keywords = [
    "dart",
    "edgar",
    "sec",
    "financial-statements",
    "korea",
    "disclosure",
    "accounting",
    "polars",
    "sections",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
dependencies = [
    "alive-progress>=3.3.0,<4",
    "beautifulsoup4>=4.14.3,<5",
    "lxml>=6.0.2,<7",
    "marimo>=0.20.4,<1",
    "openpyxl>=3.1.5,<4",
    "diff-match-patch>=20230430",
    "orjson>=3.10.0,<4",
    "polars>=1.0.0,<2",
    "requests>=2.32.5,<3",
    "rich>=14.3.3,<15",
]

[project.optional-dependencies]
llm = [
    "openai>=1.0.0,<3",
]
llm-anthropic = [
    "openai>=1.0.0,<3",
    "anthropic>=0.30.0,<2",
]
charts = [
    "networkx>=3.6.1,<4",
    "plotly>=5.0.0,<6",
    "scipy>=1.17.1,<2",
]
ai = [
    "fastapi>=0.135.1,<1",
    "httpx>=0.28.1,<1",
    "msgpack>=1.1.0,<2",
    "uvicorn[standard]>=0.30.0,<1",
    "sse-starlette>=2.0.0,<3",
]
event = [
    "yfinance>=0.2.30,<1",
]
mcp = [
    "mcp[cli]>=1.0,<2",
]
ui = [
    "dartlab[ai]",
]
channel = [
    "dartlab[ai]",
    "pycloudflared>=0.3",
]
channel-ngrok = [
    "dartlab[ai]",
    "pyngrok>=7.0,<8",
]
channel-full = [
    "dartlab[channel,channel-ngrok]",
    "python-telegram-bot>=21.0,<22",
    "slack-bolt>=1.18,<2",
    "discord.py>=2.4,<3",
]
all = [
    "openai>=1.0.0,<3",
    "anthropic>=0.30.0,<2",
    "plotly>=5.0.0,<6",
    "fastapi>=0.135.1,<1",
    "httpx>=0.28.1,<1",
    "msgpack>=1.1.0,<2",
    "uvicorn[standard]>=0.30.0,<1",
    "sse-starlette>=2.0.0,<3",
    "yfinance>=0.2.30,<1",
]

[project.scripts]
dartlab = "dartlab.cli.main:main"

[project.entry-points."dartlab.plugins"]

[project.urls]
Homepage = "https://github.com/eddmpython/dartlab"
Repository = "https://github.com/eddmpython/dartlab"
Issues = "https://github.com/eddmpython/dartlab/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dartlab"]
exclude = ["**/_reference/**"]

[tool.hatch.build.targets.sdist]
include = [
    "src/dartlab/**/*.py",
    "src/dartlab/**/*.json",
    "src/dartlab/**/*.parquet",
    "README.md",
    "LICENSE",
]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = ["experiments", "*/_reference"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E402", "E501", "E741", "F841"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "requires_data: 로컬 parquet 데이터 필요 (CI에서 skip)",
    "unit: 순수 로직/mock만 — 데이터 로드 없음, 병렬 안전",
    "heavy: 대량 데이터 로드 — 단독 실행 필수",
]

[tool.coverage.run]
source = ["dartlab"]
omit = [
    "src/dartlab/ui/*",
    "src/dartlab/engines/ai/providers/*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "raise NotImplementedError",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["src/dartlab"]
exclude = [
    "src/dartlab/engines/ai/providers/**",
    "src/dartlab/ui/**",
    "experiments/**",
]
reportMissingTypeStubs = false
reportUnknownParameterType = false
reportUnknownMemberType = false
reportUnknownVariableType = false

[tool.bandit]
exclude_dirs = ["experiments", "tests"]
skips = ["B101"]

[dependency-groups]
dev = [
    "build>=1.4.0",
    "dartlab[all]",
    "hatchling>=1.29.0",
    "pillow>=12.1.1",
    "pre-commit>=4.0.0",
    "pyright>=1.1.0",
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
]
