[project]
name = "dartlab"
version = "0.7.11"
description = "DART 전자공시 + EDGAR 공시를 하나의 회사 맵으로 — Python 재무 분석 라이브러리"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
authors = [
    {name = "eddmpython"}
]
keywords = [
    "dart",
    "edgar",
    "sec",
    "financial-statements",
    "korea",
    "disclosure",
    "accounting",
    "polars",
    "sections",
    "mcp",
    "ai-analysis",
    "annual-report",
    "10-k",
    "xbrl",
    "전자공시",
    "재무제표",
    "사업보고서",
    "공시분석",
    "다트",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Natural Language :: Korean",
    "Natural Language :: English",
    "Typing :: Typed",
]
dependencies = [
    "alive-progress>=3.3.0,<4",
    "beautifulsoup4>=4.14.3,<5",
    "lxml>=6.0.2,<7",
    "marimo>=0.20.4,<1",
    "openpyxl>=3.1.5,<4",
    "diff-match-patch>=20230430",
    "httpx>=0.28.1,<1",
    "orjson>=3.10.0,<4",
    "polars>=1.0.0,<2",
    "requests>=2.32.5,<3",
    "prompt-toolkit>=3.0,<4",
    "rich>=14.3.3,<15",
    "textual>=2.0,<9",
    "plotly>=5.0.0,<6",
    "mcp[cli]>=1.0",
    "huggingface-hub>=0.20.0,<1",
    # LLM providers
    "openai>=1.0.0,<3",
    "google-genai>=1.0.0,<2",
    "anthropic>=0.30.0,<2",
    # charts
    "networkx>=3.6.1,<4",
    "scipy>=1.17.1,<2",
    # ai server
    "fastapi>=0.135.1,<1",
    "msgpack>=1.1.0,<2",
    "uvicorn[standard]>=0.30.0,<1",
    "sse-starlette>=2.0.0,<3",
    # display
    "great-tables>=0.15.0,<1",
    "itables>=2.0.0,<3",
    # search
    "tavily-python>=0.5.0,<1",
    "duckduckgo-search>=7.0.0,<8",
]

[project.optional-dependencies]
# 하위호환 alias — 이제 모두 기본 의존성
llm = ["dartlab"]
llm-anthropic = ["dartlab"]
charts = ["dartlab"]
ai = ["dartlab"]
mcp = ["dartlab"]
display = ["dartlab"]
hf = ["dartlab"]
search = ["dartlab"]
ui = ["dartlab"]
altair = [
    "altair>=5.0.0,<6",
]
channel = [
    "pycloudflared>=0.3",
]
channel-ngrok = [
    "pyngrok>=7.0,<8",
]
channel-full = [
    "dartlab[channel,channel-ngrok]",
    "python-telegram-bot>=21.0,<22",
    "slack-bolt>=1.18,<2",
    "discord.py>=2.4,<3",
]
all = ["dartlab[channel-full,altair]"]

[project.scripts]
dartlab = "dartlab.cli.main:main"

[project.entry-points."dartlab.plugins"]

[project.urls]
Homepage = "https://eddmpython.github.io/dartlab/"
Repository = "https://github.com/eddmpython/dartlab"
Documentation = "https://eddmpython.github.io/dartlab/docs/"
Issues = "https://github.com/eddmpython/dartlab/issues"
Changelog = "https://eddmpython.github.io/dartlab/docs/changelog"
Demo = "https://huggingface.co/spaces/eddmpython/dartlab"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dartlab"]
exclude = [
    "**/_reference/**",
    "src/dartlab/engines/edinet/**",
    "src/dartlab/engines/esg/**",
    "src/dartlab/engines/event/**",
    "src/dartlab/engines/supply/**",
    "src/dartlab/engines/watch/**",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/dartlab/**/*.py",
    "src/dartlab/**/*.json",
    "src/dartlab/**/*.parquet",
    "README.md",
    "LICENSE",
]
exclude = [
    "**/_reference/**",
    "src/dartlab/engines/edinet/**",
    "src/dartlab/engines/esg/**",
    "src/dartlab/engines/event/**",
    "src/dartlab/engines/supply/**",
    "src/dartlab/engines/watch/**",
]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = ["experiments", "*/_reference"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E402", "E501", "E741", "F841"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
markers = [
    "requires_data: 로컬 parquet 데이터 필요 (CI에서 skip)",
    "unit: 순수 로직/mock만 — 데이터 로드 없음, 병렬 안전",
    "integration: Company 1개 로딩 필요 — 중간 무게",
    "heavy: 대량 데이터 로드 — 단독 실행 필수",
]

[tool.coverage.run]
source = ["dartlab"]
omit = [
    "src/dartlab/ui/*",
    "src/dartlab/engines/ai/providers/*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "raise NotImplementedError",
]
fail_under = 60

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["src/dartlab"]
exclude = [
    "src/dartlab/engines/ai/providers/**",
    "src/dartlab/ui/**",
    "experiments/**",
]
reportMissingTypeStubs = false
reportUnknownParameterType = false
reportUnknownMemberType = false
reportUnknownVariableType = false

[tool.bandit]
exclude_dirs = ["experiments", "tests"]
skips = ["B101"]

[dependency-groups]
dev = [
    "build>=1.4.0",
    "dartlab[all]",
    "hatchling>=1.29.0",
    "pillow>=12.1.1",
    "pre-commit>=4.0.0",
    "pyright>=1.1.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "radon>=6.0.0",
    "vulture>=2.0",
]
