[package]
name = "dartlab-core"
version = "0.1.0"
edition = "2021"
description = "dartlab sections pipeline — Rust accelerated core"

[lib]
name = "dartlab_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
regex = "1"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake2 = "0.10"
