[package]
name = "dartlab-native-poc"
version = "0.1.0"
edition = "2021"

[lib]
name = "dartlab_native_poc"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"] }
regex = "1"
blake2 = "0.10"
hex = "0.4"
once_cell = "1"

# For returning raw bytes instead of Python dicts
serde = { version = "1", features = ["derive"] }
serde_json = "1"
